--- a/view/admin.ejs
+++ b/view/admin.ejs
@@ -15,7 +15,7 @@
     <br>
   <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
   <!-- Brand -->
-  <a class="navbar-brand" href="#">Developer Funnel</a>
+  <a class="navbar-brand" href="#">Student Data</a>
 
   <!-- Toggler/collapsibe Button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -29,7 +29,7 @@
         <a class="nav-link" href="/">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/new">Add new</a>
+        <a class="nav-link" href="/form">Add new</a>
       </li>
     </ul>
   </div> 
