--- a/view/form.ejs
+++ b/view/form.ejs
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Student Form</title>
 </head>
+
 <body>
-    <h1>Student Form</h1>
+    <h1>Add New Student</h1>
     <form action="form-submit" method="POST">
         <div>
             <!--Add few elements to the form-->
