--- a/view/index.ejs
+++ b/view/index.ejs
@@ -35,35 +35,56 @@
             <h2>List of Students</h2>
             <div class="table-student">
                 <table class="table table-hover table-striped"  id="myTable">
-                    <caption>Students List</caption>
                     <thead class="thead-dark">
                         <tr>
-                            <th>FName</th>
-                            <th>MName</th>
-                            <th>LName</th>
-                            <th>Mobile_No</th>
+                            <th>F Name</th>
+                            <th>M Name</th>
+                            <th>L Name</th>
+                            <th>Mobile No</th>
                             <th>Age</th>
                             <th>Stream</th>
-                            <th>Email_ID</th>
+                            <th>Email ID</th>
                             <th>Country</th>
                             <th>Status</th>
                         </tr>
                     </thead>
-                   
+                    <tbody>
+                        <%for(let i=0; i<data.length; i++) {%>
+                        <tr>
+                            <td><%=data[i].FName%></td>
+                            <td><%=data[i].MName%></td>
+                            <td><%=data[i].LName%></td>
+                            <td><%=data[i].Mobile_No%></td>
+                            <td><%=data[i].Age%></td>
+                            <td><%=data[i].Stream%></td>
+                            <td><%=data[i].Email_ID%></td>
+                            <td><%=data[i].Country%></td>
+                            <td><%=data[i].Status%></td> 
+                            <!-- <td> -->
+                                <!-- <button type="button" class="edit btn btn-warning"
+                                 data-toggle="modal" data-target="#myModal"
+                                 id="<%=data[i]._id%>">Edit</button>
+                                <button type="button" class="delete btn btn-danger" id="<%=data[i]._id%>">
+                                    Delete
+                                </button> -->
+                            <!-- </td>  -->
+                        </tr>
+                        <%}%> 
+                    </tbody>
                 </table>
                 <!-- The Modal -->
-                <div class="modal" id="myModal">
+                <!-- <div class="modal" id="myModal">
                     <div class="modal-dialog">
                         <div class="modal-content">
                     
-                            <!-- Modal Header -->
-                            <div class="modal-header">
+                            
+                             <div class="modal-header">
                             <h4 class="modal-title">Modal Heading</h4>
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            </div>
+                            </div> -->
                     
                             <!-- Modal body -->
-                            <div class="modal-body">
+                            <!-- <div class="modal-body">
                                 <form action="/updateUser" method="POST" id="update_user">
                                     <input type="text" readonly class="form-control" id="update_id"  name="_id">
                                     <div class="form-group">
@@ -104,13 +125,13 @@
                                     </div>
                                 </form>
                   
-                            </div>
+                            </div> -->
                     
                             <!-- Modal footer -->
-                            <div class="modal-footer">
+                             <!-- <div class="modal-footer">
                                     <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
                                     <button type="submit" id="update_table" class="btn btn-primary">update</button>
-                            </div>
+                            </div> -->
                     
                         </div>
                     </div>
@@ -118,3 +139,4 @@
             </div>
         </div>
     </body>
+</html>
