--- a/view/index.ejs
+++ b/view/index.ejs
@@ -23,11 +23,23 @@
                 <div class="collpase navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
+                            <a class="nav-link" href="/index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/form">Add new</a>
+                            <a class="nav-link" href="/new">Add new</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Update">Update</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="/Delete">Delete</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="/Activate">Activate</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="/Deactivate">Deactivate</a>
+                          </li>
                     </ul>
                 </div>
             </nav>
