--- a/view/update.ejs
+++ b/view/update.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Add new Data</title>
+  <title>Update User</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
@@ -15,7 +15,7 @@
     <br>
   <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
   <!-- Brand -->
-  <a class="navbar-brand" href="#">Add User</a>
+  <a class="navbar-brand" href="#">Update User</a>
 
   <!-- Toggler/collapsibe Button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -46,22 +46,26 @@
     </ul>
   </div> 
 </nav>
-  <h2>Add new Data</h2>
-  <form action="/AddUser" method="POST">
+  <h2>Update Data</h2>
+  <form action="/UpdateUser" method="POST">
+    <div class="form-group">
+      <label for="name">Enter ID:</label>
+      <input type="text" class="form-control" id="name" placeholder="Enter ID" name="_id" required>
+    </div>
     <div class="form-group">
       <label for="name">Name:</label>
       <input type="text" class="form-control" id="name" placeholder="Enter First name" name="FName" required>
     </div>
     <div class="form-group">
-      <input type="text" class="form-control" id="name" placeholder="Enter Middle name" name="MName" required>
+      <input type="text" class="form-control" id="name" placeholder="Enter Middle name" name="MName" >
     </div>
     <div class="form-group">
-      <input type="text" class="form-control" id="name" placeholder="Enter Last name" name="LName" required>
+      <input type="text" class="form-control" id="name" placeholder="Enter Last name" name="LName" >
     </div>
     <div class="form-group">
-      <label for="city">Mobile No:</label>
-      <input type="text" class="form-control" id="city" placeholder="Enter Mobile No" name="Mobile_No">
-    </div>
+        <label for="city">Mobile No:</label>
+        <input type="text" class="form-control" id="city" placeholder="Enter Mobile No" name="Mobile_No">
+      </div>
     <div class="form-group">
       <label for="city">Age:</label>
       <input type="text" class="form-control" id="city" placeholder="Enter your age" name="Age">
@@ -85,8 +89,8 @@
           <option value="Russia">Russia</option>
         </select>
       </div><br>
-    <button type="submit" class="btn btn-primary">Add</button>
-    <a href = "/index" class="btn btn-success" role="button">cancel</a>
+    <button type="submit" class="btn btn-primary">Update</button>
+    <a href="/index" class="btn btn-success" role="button">cancel</a>
   </form><br>
 
 </div>
